--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.13.0",
     "express": "^4.12.3",
-    "lodash": "^3.7.0"
+    "lodash": "^3.7.0",
+    "shortid": "^2.2.2"
   }
 }
