--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.13.0",
     "express": "^4.12.3",
     "lodash": "^3.7.0",
+    "passport": "^0.2.2",
     "shortid": "^2.2.2"
   }
 }
