--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.12.3",
     "lodash": "^3.7.0",
     "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
     "shortid": "^2.2.2"
   }
 }
